# callimachus

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LEARNINGS.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEV_PLAN.md  ONBOARDING.md  PLUGINS.md  USER_STORIES.md
experiments/: README.md  _common.py
experiments/00-env-check/: LEARNINGS.md  README.md  run.py
experiments/01-pydantic-ai-hello/: LEARNINGS.md  README.md  run.py
experiments/02-pydantic-ai-tool-calling/: LEARNINGS.md  README.md  run.py  run_error.py
experiments/03-pydantic-ai-structured-output/: LEARNINGS.md  README.md  run.py
experiments/04-pydantic-ai-provider-swap/: LEARNINGS.md  README.md  run.py
experiments/05-pydantic-ai-streaming/: LEARNINGS.md  README.md  chat.py  events.py  nodes.py
experiments/06-pydantic-ai-sub-agents/: LEARNINGS.md  README.md  run.py
experiments/17-source-openalex/: LEARNINGS.md  README.md  run.py
experiments/31-serper-search/: LEARNINGS.md  README.md  run.py
experiments/32-perplexity-openrouter/: LEARNINGS.md  README.md  run.py
src/callimachus/: __init__.py  cli.py  llm.py
src/callimachus/discovery/: __init__.py  ceremony.py  hunter.py  judge.py  orchestrator.py  plan.py  scout.py
src/callimachus/pipeline/: __init__.py  chunk.py  download.py  embed.py  enrich.py  extract.py  index.py  ingest.py  paths.py
src/callimachus/pipeline/ocr/: __init__.py  mistral.py  protocols.py
src/callimachus/sources/: __init__.py  protocols.py  registry.py
src/callimachus/sources/bundled/: __init__.py  arxiv.py  local_pdfs.py  openalex.py  perplexity.py  serper.py  unpaywall.py
src/callimachus/storage/: __init__.py  db.py  models.py  vec.py
src/callimachus/storage/migrations/: env.py
src/callimachus/storage/migrations/versions/: 033a472de5f5_initial_schema.py
tests/: test_cli.py  test_smoke.py
tests/discovery/: test_ceremony.py  test_hunter.py  test_judge.py  test_orchestrator.py  test_plan.py  test_scout.py
tests/pipeline/: test_chunk.py  test_download.py  test_embed.py  test_enrich.py  test_extract.py  test_index.py  test_ingest.py  test_ocr.py  test_ocr_mistral.py  test_paths.py
tests/sources/: test_arxiv.py  test_local_pdfs.py  test_openalex.py  test_perplexity.py  test_protocols.py  test_registry.py  test_serper.py  test_unpaywall.py
tests/sources/fixtures/: arxiv_atom_response.xml  openalex_response.json  serper_scholar_response.json  serper_web_response.json
tests/storage/: test_migrations.py  test_smoke.py
